<resources>
    <string name="app_name">Emode</string>
    <string name="version_smmitest_tools">v1.0.1</string>
    <string name="hello_world">Hello world!</string>
    <string name="application_name">SMMI TEST</string>
    <string name="action_test_result">Test Result</string>
    <string name="action_clear_cache">Clear Cache</string>
    <string name="action_reset">Reset</string>
    <string name="action_about">About</string>
    <string name="btn_start">Start</string>
    <string name="btn_test_again">Test Again</string>
    <string name="text_testing">Now testing ...</string>
    <string name="item_test_all_main">Test All</string>
    <string name="item_test_single_main">Single Test</string>
    <string name="item_upload_main">Upload</string>
    <string name="item_help_main">Help</string>
    <string name="text_test_bluetooth">Bluetooth Test</string>
    <string name="text_test_wifi">WiFi Test</string>
    <string name="text_test_battery">Battery Test</string>
    <string name="text_test_ecompass">ECompass Test</string>
    <string name="text_test_modem">Modem Test</string>
    <string name="text_test_gsensor">GSensor Test</string>
    <string name="text_test_keypad">Keypad Test</string>
    <string name="text_test_touch">Touch Test</string>
    <string name="text_test_multitouch">Multitouch Test</string>
    <string name="text_test_vibrator">Vibrator Test</string>
    <string name="text_test_receiver">Receiver Test</string>
    <string name="text_test_speaker">Speaker Test</string>
    <string name="text_test_broadmic">BroadMic Test</string>
    <string name="text_test_main_camera">Main Camera Capture Test</string>
    <string name="text_test_front_camera">VGACam Capture Test</string>
    <string name="text_test_camera_flash">CameraFlash Test</string>
    <string name="text_test_display">Display Test</string>
    <string name="text_test_headset">Headset Test</string>
    <string name="text_test_headset_mic">Headset Mic Test</string>
    <string name="text_test_headset_key">Headset Key Test</string>
    <string name="text_test_sdcard">SDcard Test</string>
    <string name="text_test_simcard">SIMcard Test</string>
    <string name="text_test_lightsensor">LightSensor Test</string>
    <string name="text_test_proximity">Proximity Test</string>
    <string name="title_test_battery">Battery Test</string>
    <string name="health_test_battery">Battery health:</string>
    <string name="voltage_test_battery">Battery voltage:</string>
    <string name="electric_text_battery">Battery scale:</string>
    <string name="temerature_text_battery">Battery temerature:</string>
    <string name="level_text_battery">Battery level:</string>
    <string name="status_text_battery">Battery status:</string>
    <string name="powerType_text_battery">Battery powerType:</string>
    <string name="batteryStatus_text_battery">test.....</string>
    <string name="unknown_text_battery">unknown</string>
    <string name="disconnect_text_battery">disconnect</string>
    <string name="title_test_keypad">Please press Volume Up button.</string>
    <string name="volume_up_test">Volume Up</string>
    <string name="volume_down_test">Volume Down</string>
    <string name="title2_test_keypad">Please press Volume Down button.</string>
    <string name="toast_msg_keypad">Please press Volume Up button.</string>
    <string name="title3_test_keypad">Test Success !</string>
    <string name="title_test_camera">Please check camera flash is ok ?</string>
    <string name="title_test_speaker">Test ....</string>
    <string name="speaker_test_fail">Fail</string>
    <string name="speaker_test_pass">Pass</string>
    <string name="str_test_gsensor">The GSensor Test is used to test whether the gravity sensor is working or not.
        \nTest Procedure:\n1.Roll the device.\n2.If the device detects the gravity,the directtion turns on.
        \n3.If all of the directions turns on,this test procudure will finish automatically,else press the [FAIL] button to terminate this test procedure.</string>
    <string name="str_test_keypad">The Keypad Test is used to test whether the Keypad is working or not.\n
    Test Procedure:\n1.According to the notice,press specified Keypad.\n
    2.If the keyPad works well,this test procedure will finish automatically,else press the [FAIL] bytton to terminate this test procedure.</string>
    <string name="str_test_touch">The Touch Test is used to test the sensitivity of the touch screen by finger pressure.\n
    Test Procedure:\n1.Draw on the screen using fingers.\nPress back button to return result,if drawing successful,press the [PASS] button,
    else press the [FAIL] buton to terminate this test procedure.</string>
    <string name="str_test_multitouch">The Multiple Touch is used to test whether the multiple touch function of the panel is working or not.\n
    Test Procedure:\n1.Put the fingers on the screen.\n2.If the multitouch function works well,this test procedure will finish automatically,else press the [FAIL] button to
    terminate the test procedure.</string>
    <string name="str_test_vibrator">The Vibrator si used to test whether the vibrator function of this device is working or not.\n
    Test Procedure:\n1.Press button to control vibrator on or vibrator off.\n
        2.If the vibrator funtion works well,press [PASS] button,else press the [FAIL] button to terminate this test procedure.</string>
    <string name="camera_flash_button_fail">Fail</string>
    <string name="camera_flash_button_Pass">Pass</string>
    <string name="keypad_text_line">_______________________________________________</string>
    <string name="main_text_text1">%</string>
    <string name="main_text_usage">CPU Usage</string>
    <string name="main_text_battery_level">Battery Level</string>
    <string name="friendly_remind">Please shake your hands to remove the external magnetic field</string>
    <string name="dialog_headsetmic_in">please plug your earphone~</string>
    <string name="text_headsetmic_record">Recording...</string>
    <string name="text_headsetmic_play">Playing...</string>
    <string name="dialog_headsetmic_nofound">No headset found</string>
    <string name="dialog_title">Test Finished</string>
    <string name="dialog_juge">Test finished.Please make a judgement.</string>
    <string name="tv_lsensor_closeinfo">\n Please move your phone close to a light. \n_______________________________________</string>
    <string name="tv_lsensor_awayinfo">Please move your phone away from light and cover the top half of it using a hand. \n_______________________________________</string>
    <string name="tv_lsensor_success">\n Test Success ! \n_______________________________________</string>
    <string name="strong_light_test">Sense strong light(ADC＞300)</string>
    <string name="weak_light_test">Sense weak light(ADC＜5)</string>
    <string name="about_legalinfo_01">ASUSTeK Computer Inc</string>
    <string name="about_legalinfo_02">Personal Mobile Device BU</string>
    <string name="about_website">http://www.asus.com.tw</string>
    <string name="about_modelname_show">Model Name</string>
    <string name="about_version_show">Version</string>
    <string name="about_Legalinfo_show">Legal Information</string>
    <string name="about_website_show">Website</string>
    <string name="about_longline">_______________________________________________</string>
    <string name="btn_fail">Fail</string>
    <string name="tv_vibrator">Vibrator</string>
    <string name="pass_result_bluetooth">The Bluetooth Test is working well</string>
    <string name="failed_result_bluetooth">The Bluetooth Test is failed</string>
    <string name="title_test_bt">Bluetooth Test</string>
    <string name="status_test_bt">Bluetooth Status: </string>
    <string name="address_test_bt">MAC Address:</string>
    <string name="devicelist_test_bt">Device List:</string>
    <string name="status_on_bt">"On"</string>
    <string name="status_off_bt">"Off"</string>
    <string name="status_scanning_bt">"Scanning..."</string>
    <string name="no_bt_device">"Scanning is finished, didn't find the Bluetooth device!"</string>
    <string name="unknown">"unknown"</string>
    <string name="title_result_test">Test Result</string>
    <string name="tv_passed_result">"Passed:"</string>
    <string name="tv_failed_result">"Failed:"</string>
    <string name="text_pass_result"> is working well</string>
    <string name="text_fail_result"> is failed</string>
    <string name="text_headsetkey_dialogtitle">find no earphone</string>
    <string name="text_headsetkey_keyon">please press the hook key~</string>
    <string name="text_headsetkey_dialogtext">can not find the earphone,please plug your earphone~</string>
    <string name="memory_usage_rate">Memory Usage Rate</string>
    <string name="text_headsetkey_fail">Fail</string>
    <string name="text_multitouch_fail">Fail</string>
    <string name="status_test_wifi">Wifi Status: </string>
    <string name="address_test_wifi">MAC Address: </string>
    <string name="devicelist_test_wifi">Device List: </string>
    <string name="status_on_wifi">"On"</string>
    <string name="status_off_wifi">"Off"</string>
    <string name="toast_display">Please click the screen</string>
    <string name="text_headset_play">Playing...</string>
    <string name="text_broadmic_record">Recording...</string>
    <string name="pass_result_sdcard">The Sdcard is working well</string>
    <string name="failed_result_sdcard">The Sdcard test is failed</string>
    <string name="stat_null">stat:null</string>
    <string name="action">action:</string>
    <string name="externalPath">externalPath:</string>
    <string name="title_test_sd">Sdcard Test</string>
    <string name="no_sd_device">"Scanning is finished, didn't find the Sdcard device!"</string>
    <string name="tip_insert_sdcard">Sdcard has inserted!</string>
    <string name="total_test_sd">Sdcard Total: </string>
    <string name="available_test_sd">Sdcard Available: </string>
    <string name="used_test_sd">Sdcard Used: </string>
    <string name="sd_unmounted">unmounted </string>
    <string name="status_test_sd">Sdcard Status: </string>
    <string name="status_scanning_sd">"Scanning..."</string>
    <string name="pass_result_simcard">The simcard is working well !</string>
    <string name="failed_result_simcard">The simcard test is failed !</string>
    <string name="SIMcardTest"> SIMcard Test</string>
    <string name="find_sim">FIND SIMcard</string>
    <string name="no_sim">NO SIMcard</string>
    <string name="title_test_sim">SIMcard Test</string>
    <string name="sim1_state">SIMcard1_state:</string>
    <string name="sim2_state">SIMcard2_state:</string>
    <string name="imsi_1">IMSI1_ID: </string>
    <string name="imsi_2"> IMSI2_ID:</string>
    <string name="proximity_test">Proximity Test</string>
    <string name="title_test_proximity">Please move your hand over the top half of your phone! \n_______________________________________</string>
    <string name="title_proximity_away">Please move your hand away from the top half of your phone! \n_______________________________________</string>
    <string name="tv_proximity_success">\n Test Success ! \n_______________________________________</string>
    <string name="Near">Near</string>
    <string name="Away">Away</string>
	<string name="Fail">Fail</string>
	<string name="pass">pass</string>
	 <string name="percent">%</string>
	 <string name="text_battery_level">Battery Level</string>
	 <string name="text_usage">  Usage</string>
      <string name="compass_pass">pass</string>
      <string name="compass_fail">fail</string>
      <string name="touch_iv_canvas">Please move your finger on the screen. Press back or menu to choose pass fail.</string>
</resources>