<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:layout_height="match_parent" android:background="@color/black1">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:id="@+id/tv_title_about"
           android:layout_width="match_parent"
           android:layout_height="40dp"
            />
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_modelname_show"
            android:textSize="18dp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/about_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_longline"
            android:textColor="@color/gray"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version_show"
            android:textSize="18dp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/about_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_longline"
            android:textColor="@color/gray"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_Legalinfo_show"
            android:textSize="18dp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/about_info_lin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_legalinfo_01"
            android:textSize="16dp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/about_info_lin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_legalinfo_02"
            android:textSize="16dp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_longline"
            android:textColor="@color/gray"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_website_show"
            android:textSize="18dp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/about_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_website"
            android:textSize="16dp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_longline"
            android:textColor="@color/gray"
            />
    </LinearLayout>


</LinearLayout>