<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/black1"
    tools:context=".MAIN">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_iv_common"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/title_simcard"
            android:text="@string/title_test_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/sim1_state"
            android:text="@string/sim1_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            />


        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/imsi_1"
            android:text="@string/imsi_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            />


        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/sim2_state"
            android:text="@string/sim2_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            />

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/imsi_2"
            android:text="@string/imsi_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            />
    </LinearLayout>
</LinearLayout>
