<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/black1"
    tools:context=".MAIN"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_iv_common"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/tv_title_sd"
            android:text="@string/title_test_sd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/tv_status_sd"
            android:text="@string/status_test_sd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            />


        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/tv_total_sd"
            android:text="@string/total_test_sd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            />

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/tv_available_sd"
            android:text="@string/available_test_sd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            />
        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/tv_used_sd"
            android:text="@string/used_test_sd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            />
    </LinearLayout>


</LinearLayout>
