<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/black1"
    tools:context=".MAIN">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_iv_common"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
    <TextView
        android:id="@+id/tv_title_bt"
        android:text="@string/title_test_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        />

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/tv_status_bt"
            android:text="@string/status_test_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            />


        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/tv_address_bt"
            android:text="@string/address_test_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            />

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/tv_device_bt"
            android:text="@string/devicelist_test_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            />
</LinearLayout>

</LinearLayout>
