<?xml version="1.0" encoding="utf-8"?><!--liaozhenbin@wind-mobi.com 20160108 mod begin--><!--创建activity_testing 布局文件-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_iv_common"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/tv_title_wifi"
            android:text="@string/text_test_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/tv_status_wifi"
            android:text="@string/status_test_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            />


        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/tv_address_wifi"
            android:text="@string/address_test_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            />

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/tv_device_wifi"
            android:text="@string/devicelist_test_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            />
    </LinearLayout>

</LinearLayout><!--liaozhenbin@wind-mobi.com 20160108 mod end-->
