<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/black1"
    tools:context=".MAIN">


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20dp"
    android:textColor="@color/white"
    android:text="@string/title_test_camera"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="80dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="350dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_flash_button_fail"
            android:background="@drawable/shape_button"
            android:id="@+id/fail_btn_camera"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:background="@drawable/shape_button"
            android:text="@string/camera_flash_button_Pass"
            android:id="@+id/pass_btn_camera"/>

    </LinearLayout>
</LinearLayout>