<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MAIN">

    <TextView
        android:id="@+id/tv_title_keypad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/title_test_keypad"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/keypad_text_line"
        />

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_up_keypad"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_right_keypad"
                android:visibility="visible"></ImageView>

            <TextView
                android:id="@+id/tv1_test_keypad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume_up_test"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/image2_up_keypad"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_right_keypad"
                android:visibility="visible"></ImageView>

            <TextView
                android:id="@+id/tv2_test_keypad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume_down_test"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>
    
    <Button
        android:id="@+id/btn_test_keypad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:text="@string/camera_flash_button_fail"
        android:layout_gravity="center_horizontal"
        android:gravity="center"></Button>
</LinearLayout>
